--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
 				<p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis... </p>
 			</div>
 			<div class="bg-title4">
-				<span class="title-img">Cats in Control-Is It a Thing?</span>
+				<div class="stories">
+					<span class="title-img story">Cats in Control-Is It a Thing?</span>
+				</div>
+				
 			</div>
-			<div>
+			<div class="story">
 				<p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in. </p>
 			</div>
 		</div>
@@ -61,7 +64,14 @@
 				<img src="resources/images/cookie.png" alt="cookie">
 				<div class="bites">
 					<h2>NEWS BITES</h2>
-					<p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+					<li class="list">
+						<ul>Cat Emoji Goes Viral Buy</ul>
+						<ul>Youtube Views</ul>
+						<ul>Home Business Advertising Ideas</ul>
+						<ul>Advertising Internet Online</ul>
+						<ul>Illustration in Marketing Materials</ul>
+						<ul>Finally a Top Secret Way You Can</ul>
+					</li> 
 				</div>				
 			</div>		
 		</div>
