--- a/index.html
+++ b/index.html
@@ -76,5 +76,19 @@
 			</div>		
 		</div>
 	</div>
+	<footer class="footer">
+			<div>
+				<span class="title">MYTimes</span>
+				<nav>
+					<span><a href="#">World</a></span>
+					<span><a href="#">US</a></span>
+					<span><a href="#">Tech</a></span>
+					<span><a href="#">Science</a></span>
+				</nav>
+			</div>
+			<div>
+				&copy 2016, My Times (A Division of Codecademy bite)
+			</div>
+		</footer>
 </body>
 </html>
